# ComputerVision

./: README.md
2041389_MengluTao_Lab2/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Start_YTB  cmake_install.cmake  main.cpp
2041389_MengluTao_Lab4/: .lab4_report.pdf.icloud  CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp
2041389_MengluTao_Lab4/data/LNSRT2/: .portello.jpg.icloud  .portello_patch00.jpg.icloud  .portello_patch01.jpg.icloud  .portello_patch12.jpg.icloud  .portello_patch21.jpg.icloud
2041389_MengluTao_Lab4/test_outputs/T2/: .final_stitched_image.png.icloud
Lab4/: main.cpp
